# polyevolve

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  LICENSE  PLATFORM_PLAN.md  README.md  VLLM.md  docker-compose.yml  pyproject.toml
.githooks/: pre-commit
.github/workflows/: ci.yml
assets/: export_final.py
src/polyevolve/: __init__.py  api.py  cli.py  cli_ui.py  config.py
src/polyevolve/agents/: foreign_politics_agent.py
src/polyevolve/bench/: __init__.py  coherence.py  datasets.py  pools.py  returns.py  scoring.py  sim.py  splits.py
src/polyevolve/connectors/: finmarkets.py  news.py  pageviews.py  polls.py  web.py
src/polyevolve/contracts/: __init__.py  agents.py  data.py  markets.py  models.py
src/polyevolve/core/: interfaces.py  registry.py  types.py
src/polyevolve/data_sources/: finmarkets.py  gdelt.py  gdelt_bq.py  gdelt_bq_news.py  gdelt_doc.py  keyword_resolver.py  manifold.py  pageviews.py  polls.py  pollster_bias.py  prices.py  processing.py  registry.py  scraping.py  trends.py  trends_features.py  worldbank.py
src/polyevolve/evolution/: __init__.py  evaluator.py  genome.py
src/polyevolve/evolve/: __init__.py  fitness.py  optimizer.py  scoring.py
src/polyevolve/evolve/shinka/: __init__.py  _score.py  adapter.py  bridge.py  launch.py  program.py
src/polyevolve/forecasters/: baseline.py  domain_rules.py  llm_ensemble.py
src/polyevolve/harness/: rubric.py  run.py
src/polyevolve/ledger/: forward_ledger.py
src/polyevolve/market_sources/: filters.py  kalshi.py  polymarket.py
src/polyevolve/markets/: kalshi.py  polymarket.py
src/polyevolve/models/: __init__.py  anthropic_model.py  cutoffs.py  litellm_model.py  structured.py  traced.py
src/polyevolve/observability/: __init__.py  langfuse_client.py  pricing.py  recorder.py
src/polyevolve/orchestration/: backtest.py  daily_run.py  evaluate.py  scoring.py  snapshot.py  sync_resolutions.py
src/polyevolve/reason/: __init__.py  dsl.py  joint.py  nodes.py  research.py  seed.py
src/polyevolve/scout/: efficiency.py
src/polyevolve/storage/: db.py  schema.sql
tests/: test_adversarial_sim.py  test_api.py  test_backtest_asof.py  test_bench.py  test_coherence.py  test_contracts.py  test_cutoffs.py  test_evaluator.py  test_evolve.py  test_filters.py  test_finmarkets.py  test_gdelt_asof.py  test_gdelt_query.py  test_genome.py  test_harness_e2e.py  test_joint.py  test_keyword_resolver.py  test_litellm_json.py  test_news_relevance.py  test_nodes.py  test_pageviews.py  test_placeholder.py  test_polls.py  test_pools.py  test_processing.py  test_research.py  test_scoring.py  test_scout_efficiency.py  test_seed.py  test_selective.py  test_shinka.py  test_structured.py  test_thin_slice.py
